--- a/src/css/style.css
+++ b/src/css/style.css
@@ -66,17 +66,21 @@ body {
 }
 
 #main-content .game-information {
-  height: 100%;
+  height: 600px;
+  display: grid;
+  grid-template-rows: repeat(2, 1fr);
+  gap: 1em;
   border-radius: 0 1em 1em 0;
   border: 1px solid black;
   background-color: black;
 }
 
 .game-information .player-name-list {
-  padding: 1em;
+  height: 80%;
   display: flex;
   flex-direction: column;
   gap: 1em;
+  padding: 1em;
 
   .player-name {
     display: flex;
@@ -85,6 +89,17 @@ body {
     color: white;
     font-weight: 700;
   }
+}
+
+.game-information .event-log {
+  height: 80%;
+  overflow-y: auto;
+  display: flex;
+  flex-direction: column;
+  gap: 1em;
+  padding: 1em;
+
+  border: 1px solid white;
 }
 
 @media screen and (min-width: 700px) {
