--- a/src/css/style.css
+++ b/src/css/style.css
@@ -41,6 +41,13 @@ body {
   gap: 2em;
 }
 
+.board-label {
+  color: black;
+  font-size: large;
+  font-weight: 700;
+  max-width: 100%;
+}
+
 .game-board {
   position: relative;
   display: grid;
@@ -60,7 +67,7 @@ body {
   background-color: rgba(128, 128, 128, 0.75);
 }
 
-.game-board .board-cell {
+.board-cell {
   display: inline-block;
   border: 1px solid black;
 }
@@ -68,8 +75,8 @@ body {
 #main-content .game-information {
   height: 600px;
   display: grid;
-  grid-template-rows: repeat(2, 1fr);
-  gap: 1em;
+  grid-template-rows: 2fr 1fr 3fr;
+  gap: 0.5em;
   border-radius: 0 1em 1em 0;
   border: 1px solid black;
   background-color: black;
@@ -91,15 +98,42 @@ body {
   }
 }
 
+.game-information .button-list {
+  align-self: center;
+  display: flex;
+  padding: 0.5em;
+  justify-content: space-between;
+}
+
+.game-information .button-list button {
+  height: 50px;
+  width: 100%;
+  border-radius: 1em;
+  border-color: transparent;
+  background-color: #065f46;
+}
+
+.game-information .button-list button:disabled {
+  transition: all 0.1s ease;
+  background-color: #171717;
+  color: #737373;
+}
+
+.game-information .button-list button:enabled:hover {
+  transition: all 0.1s ease;
+  background-color: #059669;
+}
+
 .game-information .event-log {
   height: 80%;
-  overflow-y: auto;
+  overflow: auto;
   display: flex;
   flex-direction: column;
   gap: 1em;
   padding: 1em;
-
+  margin: 0.5em;
   border: 1px solid white;
+  border-radius: 1em;
 }
 
 @media screen and (min-width: 700px) {
